--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: #ffffff;
+  font-family: 'Raleway', sans-serif;
 }
 
 .navbar-default {
@@ -14,7 +15,6 @@ body {
 }
 
 li {
-  font-family: 'Raleway', sans-serif;
   font-weight: bold;
   font-size: 16px;
   text-transform: uppercase;
@@ -27,4 +27,13 @@ li {
   margin-right: 15px;
 }
 
-.
+#home {
+  margin-top: 100px;
+  background-image: url("img/bg1.png");
+}
+
+#home h1 {
+  font-weight: 700;
+  font-size: 60px;
+  padding: 30px;
+}
