Fix positioning in navbar

--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
+/*------!------*/
 body {
   background-color: #ffffff;
   font-family: 'Raleway', sans-serif;
 }
+
+.container {
+  padding-left: 73px;
+}
+
+/*------NAVBAR------*/
 
 .navbar-default {
   padding-top: 30px;
@@ -14,11 +21,19 @@ body {
   padding: 15px 15px;
 }
 
+.navbar-nav li a {
+  padding: 5px;
+}
+
+.navbar-right {
+  /*margin-right: -220px;*/
+}
+
 li {
   font-weight: bold;
-  font-size: 16px;
+  font-size: 14px;
   text-transform: uppercase;
-  border-top: solid 5px #fe6033;
+  border-top: solid 4px #fe6033;
   padding-top: 5px;
   padding-bottom: 5px;
   margin-bottom: 20px;
@@ -27,13 +42,40 @@ li {
   margin-right: 15px;
 }
 
+/*------HOME------*/
+
 #home {
+  height: 1000px;
   margin-top: 100px;
   background-image: url("img/bg1.png");
 }
 
+#home-text {
+  position: absolute;
+  top: 30%;
+  color: #262626;
+  padding: 0;
+}
+
 #home h1 {
-  font-weight: 700;
+  font-weight: 900;
   font-size: 60px;
-  padding: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+#home p {
+  font-size: 18px;
+  font-weight: 100;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+#home button {
+  width: 200px;
+  font-size: 16px;
+  text-transform: uppercase;
+  background-color: #fe6033;
+  color: #fff;
+  padding: 10px 16px 10px 16px;
 }
