--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ p {
   float: right;
 }
 
+
 .navbar-brand {
   float: left;
   padding: 15px 15px;
@@ -37,21 +38,20 @@ p {
   padding: 5px;
 }
 
-.navbar-right {
-  /*margin-right: -220px;*/
-}
-
 li {
   font-weight: bold;
   font-size: 14px;
   text-transform: uppercase;
-  border-top: solid 4px #fe6033;
   padding-top: 5px;
   padding-bottom: 5px;
   margin-bottom: 20px;
   margin-top: 20px;
   margin-left: 15px;
   margin-right: 15px;
+}
+
+li:hover {
+  border-top: solid 4px #fe6033;
 }
 
 /*------HOME------*/
